# mappingPlatform

./: CMakeLists.txt  README.md  configs.cmake
configs/: raspberryPlatform.json  stmPlatform.json  stmPlatform_factory_test.json  stmPlatform_test.json
robotApp/: CMakeLists.txt  GPIO_driver.cpp  I2C_driver.cpp  SPI_driver.cpp  main.cpp
schemas/: raspberryPlatform.fbs  stmPlatform.fbs
src/: CMakeLists.txt  src.cmake
src/EEprom/: JsonConfigProvider.cpp  JsonConfigProvider.hh  MemoryComparator.cpp  MemoryComparator.hh
src/HwDrivers/: GPIO_driver.hh  I2C_driver.hh  SPI_driver.hh
src/STM_interface/: BusManager.cpp  BusManager.hh
src/STM_interface/strategies/: AllDataUsed_Strategy.cpp  AllDataUsed_Strategy.hh  Battery_Strategy.cpp  Battery_Strategy.hh  DistanceMeasure_Strategy.cpp  DistanceMeasure_Strategy.hh  Double_Strategy.cpp  Double_Strategy.hh  Position_Strategy.cpp  Position_Strategy.hh  StrategySPI_ifc.hh  TransmissionKey_Strategy.cpp  TransmissionKey_Strategy.hh
src/common/: factory.cpp  factory.hh  logSystem.cpp  logSystem.hh
unitTests/: CMakeLists.txt  main_test.cpp  src.cmake
unitTests/mocks/: GPIO_driver.cpp  GPIO_driver_Mock.hh  I2C_driver.cpp  I2C_driver_Mock.hh  SPI_driver.cpp  SPI_driver_Mock.hh  TestDelay.cpp  TestDelay.hh
unitTests/src/: Matrix.hh  Matrix_test.cpp
unitTests/src/EEprom/: JsonConfigProvider_test.cpp  MemoryComparator_test.cpp
unitTests/src/STM_interface/: BusManager_test.cpp
unitTests/src/STM_interface/strategies/: AllDataUsed_Strategy_test.cpp  Battery_Strategy_test.cpp  DistanceMeasure_Strategy_test.cpp  Double_Strategy_test.cpp  Position_Strategy_test.cpp  TransmissionKey_Strategy_test.cpp
unitTests/src/common/: factory_test.cpp
